bsdgames-nonfree (2.17-3) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Aaron M. Ucko <ucko@debian.org>  Thu, 22 May 2008 18:15:01 -0400

bsdgames-nonfree (2.17-2) unstable; urgency=low

  * Convert to cdbs and debhelper 6.
  * Note compliance with current policy (3.7.3).
  * Set XS-Autobuild: yes, as the license isn't too severely non-free.

 -- Aaron M. Ucko <ucko@debian.org>  Sat, 29 Mar 2008 19:51:53 -0400

bsdgames-nonfree (2.17-1) unstable; urgency=low

  * New upstream release.
  * debian/menu: Properly double-quote command.
  * debian/watch: Added, to help track future upstream versions.

 -- Aaron M. Ucko <ucko@debian.org>  Fri, 18 Feb 2005 22:09:47 -0500

bsdgames-nonfree (2.16-1) unstable; urgency=low

  * New upstream release.
  * debian/copyright: Update infrastructure copyright to cover 2004.
  * debian/docs: drop rogue.me (now covered by upstream build system).

 -- Aaron M. Ucko <ucko@debian.org>  Fri, 20 Feb 2004 23:24:21 -0500

bsdgames-nonfree (2.15-2) unstable; urgency=low

  * debian/postinst: Use POSIX-blessed chown syntax. (Closes: #229199)
  * debian/rules: Tell vrms (and other interested parties) that the
    license forbids commercial use.

 -- Aaron M. Ucko <ucko@debian.org>  Fri, 23 Jan 2004 19:16:31 -0500

bsdgames-nonfree (2.15-1) unstable; urgency=low

  * New upstream release.
  * debian/control: standards-version 3.6.1 (no changes needed).
  * debian/copyright: rework once more; should now contain all needed info.

 -- Aaron M. Ucko <ucko@debian.org>  Mon, 22 Dec 2003 22:20:30 -0500

bsdgames-nonfree (2.14-2) unstable; urgency=low

  * config.params:
    - Make setgid games again (supposedly safe now...)
    - Support "noopt" in DEB_BUILD_OPTIONS.
    - debian/tmp -> debian/bsdgames-nonfree.
    - Miscellaneous typo fixes.
  * configure: Revert changes to defaults (config.params should suffice).
  * debian/changelog: Removed obsolete emacs settings.
  * debian/compat: Created (specifying version 4).
  * debian/control: